--- a/package.json
+++ b/package.json
@@ -2,9 +2,12 @@
   "name": "kube-slack",
   "version": "2.1.1",
   "description": "",
-  "main": "index.js",
+  "main": "src/index.js",
   "dependencies": {
     "bluebird": "^3.4.1",
+    "config": "^1.26.2",
+    "js-yaml": "^3.9.1",
+    "kubernetes-client": "^3.14.0",
     "node-slack": "0.0.7"
   }
 }
