--- a/config/default.yaml
+++ b/config/default.yaml
@@ -14,5 +14,6 @@ kube:
 # polling interval
 interval: 15000
 flood_expire: 60000
+not_ready_min_time: 60000
 
 # slack_url: 'https://wongnai.slack.com/services/hooks/incoming-webhooks?token=XXXX'
