Monitoring in current namespace only

--- a/config/custom-environment-variables.yaml
+++ b/config/custom-environment-variables.yaml
@@ -1,6 +1,7 @@
 kube:
   inCluster: KUBE_USE_CLUSTER
   kubeconfig: KUBE_USE_KUBECONFIG
+  current_namespace_only: KUBE_NAMESPACE_ONLY
 
 interval: TICK_RATE
 flood_expire: FLOOD_EXPIRE
