--- a/config/default.yaml
+++ b/config/default.yaml
@@ -19,4 +19,6 @@ interval: 15000
 flood_expire: 60000
 not_ready_min_time: 60000
 
+cluster_name: ''
+
 # slack_url: 'https://wongnai.slack.com/services/hooks/incoming-webhooks?token=XXXX'
