--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "main": "src/index.js",
   "dependencies": {
     "bluebird": "^3.4.1",
+    "bunyan": "1.8.12",
     "config": "^1.26.2",
     "js-yaml": "^3.9.1",
     "kubernetes-client": "^3.15.0",
