--- a/package.json
+++ b/package.json
@@ -4,11 +4,11 @@
   "description": "",
   "main": "src/index.js",
   "dependencies": {
-    "bluebird": "^3.4.1",
-    "bunyan": "1.8.12",
-    "config": "^1.26.2",
-    "js-yaml": "^3.9.1",
-    "kubernetes-client": "^3.15.0",
+    "bluebird": "^3.5.1",
+    "bunyan": "^1.8.12",
+    "config": "^1.30.0",
+    "js-yaml": "^3.11.0",
+    "kubernetes-client": "^5.3.0",
     "node-slack": "0.0.7"
   }
 }
