--- a/config/default.yaml
+++ b/config/default.yaml
@@ -21,3 +21,4 @@ not_ready_min_time: 60000
 
 # slack_url: 'https://wongnai.slack.com/services/hooks/incoming-webhooks?token=XXXX'
 slack_channel: null
+# slack_proxy: null
