--- a/package.json
+++ b/package.json
@@ -1,13 +1,20 @@
 {
   "name": "kube-slack",
-  "version": "3.4.0",
+  "version": "3.5.0",
   "description": "",
   "main": "src/index.js",
+  "scripts": {
+    "prettier": "prettier \"src/**/*.js\" --write"
+  },
   "dependencies": {
     "bunyan": "^1.8.12",
     "config": "^1.30.0",
+    "core-js": "^3.0.0-beta.3",
     "js-yaml": "^3.11.0",
     "kubernetes-client": "^5.3.0",
     "node-slack": "0.0.7"
+  },
+  "devDependencies": {
+    "prettier": "^1.14.2"
   }
 }
