--- a/config/custom-environment-variables.yaml
+++ b/config/custom-environment-variables.yaml
@@ -8,6 +8,7 @@ interval: TICK_RATE
 metrics_cpu: CPU_METRICS
 metrics_memory: MEMORY_METRICS
 metrics_alert: METRICS_PERCENT
+metrics_requests: METRICS_REQUESTS
 flood_expire: FLOOD_EXPIRE
 not_ready_min_time: NOT_READY_MIN_TIME
 
