New Monitor for Pod metrics (CPU/Memory usage) (#46)
* Added recovery message

* Ready containers recovering

* Prettified code

* Changelog

* Added metrics alerts

* Added metrics documentation

* Fixed variable typo, added changelog

* Resolve #45

* Add more metrics options, refactor code and better error handling

* Move checkMetric into this, remove self

* Prettify

* Use a object instead of switch

* Remove unneeded function

* Update custom-environment-variables.yaml

Fixed variable names

--- a/config/custom-environment-variables.yaml
+++ b/config/custom-environment-variables.yaml
@@ -6,6 +6,10 @@ namespaces_only: KUBE_NAMESPACES_ONLY
 recovery_alert: RECOVERY_ALERT
 
 interval: TICK_RATE
+metrics_cpu: METRICS_CPU
+metrics_memory: METRICS_MEMORY
+metrics_alert: METRICS_PERCENT
+metrics_requests: METRICS_REQUESTS
 flood_expire: FLOOD_EXPIRE
 not_ready_min_time: NOT_READY_MIN_TIME
 
