--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "src/index.js",
   "scripts": {
     "prettier": "prettier \"src/**/*.js\" \"src/**/*.ts\" --write",
-    "build": "tsc"
+    "build": "npm run tslint && tsc",
+    "tslint": "tslint -c tslint.json -p tsconfig.json"
   },
   "dependencies": {
     "bunyan": "^1.8.12",
@@ -23,6 +24,8 @@
     "@types/node-slack": "0.0.30",
     "prettier": "^1.14.2",
     "ts-node": "^7.0.1",
+    "tslint": "^5.12.0",
+    "tslint-config-prettier": "^1.17.0",
     "typescript": "^3.2.2"
   }
 }
