--- a/config/custom-environment-variables.yaml
+++ b/config/custom-environment-variables.yaml
@@ -27,4 +27,5 @@ not_ready_min_time: NOT_READY_MIN_TIME
 
 slack_url: SLACK_URL
 slack_channel: SLACK_CHANNEL
+slack_username: SLACK_USERNAME
 slack_proxy: SLACK_PROXY
